--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,39 @@
 <html>
-<head>
-<style type="text/css">
-  div {
-    width: 50px;
-    height: 50px;
-    position: absolute;
-  }
-  div.a {
-    background-color: blue;
-    top: 0px;
-    left: 0px;
-  }
-  div.b {
-    background-color: red;
-    top: 50px;
-    left: 0px;
-  }
-  div.c {
-    background-color: green;
-    top: 100px;
-    left: 0px;
-  }
-</style>
-<h1>Hello TypeScript and Sass!</h1>
-    <div>
-        <p>How are you?</p>
-    </div>
-
-</head>
-<body>
-<div class="a" id="a1"></div>
-<div class="b" id="b1"></div>
-<div class="c" id="c1"></div>
-
-</body>
+	<head>
+		<style type="text/css">
+			div {
+				width: 50px;
+				height: 50px;
+				position: absolute;
+			}
+			div.a {
+				background-color: blue;
+				top: 0px;
+				left: 0px;
+			}
+			div.b {
+				background-color: red;
+				top: 50px;
+				left: 0px;
+			}
+			div.c {
+				background-color: green;
+				top: 100px;
+				left: 0px;
+			}
+		</style>
+		<h1>
+			Hello TypeScript and Sass!Hello TypeScript and Sass!Hello TypeScript and Sass!Hello TypeScript and Sass!Hello
+			TypeScript and Sass!Hello TypeScript and Sass!Hello TypeScript and Sass!Hello TypeScript and Sass!Hello TypeScript
+			and Sass!Hello TypeScript and Sass!Hello TypeScript and Sass!
+		</h1>
+		<div>
+			<p>How are you?</p>
+		</div>
+	</head>
+	<body>
+		<div class="a" id="a1"></div>
+		<div class="b" id="b1"></div>
+		<div class="c" id="c1"></div>
+	</body>
 </html>
