--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,8 @@
 <html>
 	<head>
-		<style type="text/css">
-			div {
-				width: 50px;
-				height: 50px;
-				position: absolute;
-			}
-			div.a {
-				background-color: blue;
-				top: 0px;
-				left: 0px;
-			}
-			div.b {
-				background-color: red;
-				top: 50px;
-				left: 0px;
-			}
-			div.c {
-				background-color: green;
-				top: 100px;
-				left: 0px;
-			}
-		</style>
-		<h1>
-			Hello TypeScript and Sass!Hello TypeScript and Sass!Hello TypeScript and Sass!Hello TypeScript and Sass!Hello
-			TypeScript and Sass!Hello TypeScript and Sass!Hello TypeScript and Sass!Hello TypeScript and Sass!Hello TypeScript
-			and Sass!Hello TypeScript and Sass!Hello TypeScript and Sass!
-		</h1>
-		<div>
-			<p>How are you?</p>
-		</div>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 	</head>
 	<body>
 		<div class="a" id="a1"></div>
