--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
 		<div class="a" id="a1"></div>
 		<div class="b" id="b1"></div>
 		<div class="c" id="c1"></div>
+		<canvas id="myChart" width="400" height="400"></canvas>
 	</body>
 </html>
