--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="ja">
 	<head>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Todo Table</title>
 	</head>
 	<body>
 		<div class="a" id="a1"></div>
 		<div class="b" id="b1"></div>
 		<div class="c" id="c1"></div>
-		<canvas id="myChart" width="400" height="400"></canvas>
+		<div class="container">
+			<canvas id="chart"></canvas>
+		</div>
 	</body>
 </html>
