--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
 		<title>Todo Table</title>
 	</head>
 	<body>
-		<div class="a" id="a1"></div>
-		<div class="b" id="b1"></div>
-		<div class="c" id="c1"></div>
+		<div class="card" id="card">
+			<p class="card__title">Todoが入ります。メールを送る。</p>
+		</div>
 		<div class="container">
 			<canvas id="chart"></canvas>
 		</div>
