--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,14 @@
 		<title>Todo Table</title>
 	</head>
 	<body>
-		<div class="card" id="card">
+		<div class="card card--high" id="card">
 			<p class="card__title">Todoが入ります。メールを送る。</p>
+		</div>
+		<div class="card card--middle" id="">
+			<p class="card__title">Todoが入ります。買い物する。</p>
+		</div>
+		<div class="card card--low" id="">
+			<p class="card__title">Todoが入ります。打ち合わせに行く。</p>
 		</div>
 		<div class="container">
 			<canvas id="chart"></canvas>
