feat: card template

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,14 @@
 		<title>Todo Table</title>
 	</head>
 	<body>
-		<div class="card card--high" id="card">
-			<p class="card__title">Todoが入ります。メールを送る。</p>
-		</div>
+		<template id="template">
+			<div class="card card--high" id="card">
+				<p class="card__title title"></p>
+				<p class="limit"></p>
+				<p class="importance"></p>
+			</div>
+		</template>
+
 		<div class="card card--middle" id="">
 			<p class="card__title">Todoが入ります。買い物する。</p>
 		</div>
