feat: add data to card

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,9 @@
 	</head>
 	<body>
 		<template id="template">
-			<div class="card card--high" id="card">
+			<div class="card card--high" data-level="" data-importance="0">
+				<p class="card__limit limit"></p>
 				<p class="card__title title"></p>
-				<p class="limit"></p>
-				<p class="importance"></p>
 			</div>
 		</template>
 
