--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,11 @@
 	</head>
 	<body>
 		<template id="template">
-			<div class="card card--high" data-level="" data-importance="0">
+			<div class="card" data-level="" data-importance="0">
 				<p class="card__limit limit"></p>
 				<p class="card__title title"></p>
 			</div>
 		</template>
-
-		<div class="card card--middle" id="">
-			<p class="card__title">Todoが入ります。買い物する。</p>
-		</div>
-		<div class="card card--low" id="">
-			<p class="card__title">Todoが入ります。打ち合わせに行く。</p>
-		</div>
 		<div class="container">
 			<canvas id="chart"></canvas>
 		</div>
