--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 	</head>
 	<body>
 		<template id="template">
-			<div class="card" data-level="" data-importance="0">
-				<p class="card__limit limit"></p>
-				<p class="card__title title"></p>
+			<div class="card js-card" data-id="-1" data-level="high" data-importance="-1">
+				<p class="card__limit" data-js="limit"></p>
+				<p class="card__title" data-js="title"></p>
 			</div>
 		</template>
 		<div class="container">
