--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<template id="template">
 			<div class="card js-card" data-id="-1" data-level="high" data-importance="-1" data-top="0" data-left="0">
-				<p class="card__limit" data-js="limit"></p>
+				<p class="card__deadline" data-js="deadline"></p>
 				<p class="card__title" data-js="title"></p>
 			</div>
 		</template>
