--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,35 @@
 		<title>Todo Table</title>
 	</head>
 	<body>
-		<form class="form">
-			<input type="text" name="title" id="title" class="form__title" placeholder="追加する内容を記載してください。" />
-			<label for="deadline" class="form__label">期日:</label>
-			<input type="datetime-local" name="deadline" id="deadline" class="form__deadline" />
-			<label for="deadline" class="form__label">重要度:</label>
-			<input type="number" name="importance" id="importance" class="form__importance" placeholder="0" />
-			<input type="button" value="追加" class="form__submit" />
+		<form class="form" id="form">
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				width="24"
+				height="24"
+				viewBox="0 0 24 24"
+				class="form__accordionBtn"
+				id="formClose"
+			>
+				<path d="M0 10h24v4h-24z" />
+			</svg>
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				width="24"
+				height="24"
+				viewBox="0 0 24 24"
+				class="form__accordionBtn is-hidden"
+				id="formOpen"
+			>
+				<path d="M24 10h-10v-10h-4v10h-10v4h10v10h4v-10h10z" />
+			</svg>
+			<div class="form__inner js-formInner">
+				<input type="text" name="title" id="title" class="form__title" placeholder="追加する内容を記載してください。" />
+				<label for="deadline" class="form__label">期日:</label>
+				<input type="datetime-local" name="deadline" id="deadline" class="form__deadline" />
+				<label for="deadline" class="form__label">重要度:</label>
+				<input type="number" name="importance" id="importance" class="form__importance" placeholder="0" />
+				<input type="button" value="追加" class="form__submit" />
+			</div>
 		</form>
 		<template id="template">
 			<div class="card js-card" data-id="-1" data-level="high" data-importance="-1" data-top="0" data-left="0">
