--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,6 @@
 				<input type="datetime-local" name="deadline" id="deadline" class="form__deadline" />
 				<label for="deadline" class="form__label">重要度:</label>
 				<input type="number" name="importance" id="importance" class="form__importance" placeholder="0" />
-				<!-- <input type="submit" value="追加" class="form__submit" /> -->
 				<button type="submit" class="form__submit">追加</button>
 			</div>
 		</form>
@@ -44,6 +43,7 @@
 				<p class="card__title" data-js="title"></p>
 			</div>
 		</template>
+		<div id="menu">menu</div>
 		<div class="container" id="container">
 			<canvas id="chart"></canvas>
 		</div>
