--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
 				<p class="card__title" data-js="title"></p>
 			</div>
 		</template>
-		<div id="menu">menu</div>
+		<div class="menu" id="menu">menu</div>
 		<div class="container" id="container">
 			<canvas id="chart"></canvas>
 		</div>
