feat: handle context menu

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,11 @@
 				<p class="card__title" data-js="title"></p>
 			</div>
 		</template>
-		<div class="menu" id="menu">menu</div>
+		<ul class="menu" id="menu">
+			<li class="menu__list">更新</li>
+			<li class="menu__list">削除</li>
+			<li class="menu__list">最初の位置に戻す</li>
+		</ul>
 		<div class="container" id="container">
 			<canvas id="chart"></canvas>
 		</div>
