feat: card update

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
 		</form>
 		<template id="template">
 			<div class="card js-card" data-id="-1" data-level="high" data-importance="-1" data-top="0" data-left="0">
-				<p class="card__deadline" data-js="deadline"></p>
-				<p class="card__title" data-js="title"></p>
+				<input class="card__deadline" data-js="deadline" />
+				<textarea class="card__title" data-js="title"></textarea>
 			</div>
 		</template>
 		<template id="menu-template">
