feat: to archive list

--- a/src/index.html
+++ b/src/index.html
@@ -60,5 +60,8 @@
 		<div class="container" id="container">
 			<canvas id="chart"></canvas>
 		</div>
+		<div class="toArchiveListWrap">
+			<a href="./archives.html" class="toArchiveList" id="archiveBtn">アーカイブ一覧</a>
+		</div>
 	</body>
 </html>
