add: initial file

--- a/src/archives.html
+++ b/src/archives.html
@@ -6,5 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Todo Table - archives</title>
 	</head>
-	<body></body>
+	<body>
+		<h1 class="title">アーカイブ一覧</h1>
+		<ul>
+			<li>done1</li>
+			<li>done2</li>
+			<li>done3</li>
+			<li>done4</li>
+		</ul>
+		<div class="toArchiveListWrap">
+			<a href="/" class="toArchiveList" id="archiveBtn">テーブルに戻る</a>
+		</div>
+	</body>
 </html>
