--- a/src/archives.html
+++ b/src/archives.html
@@ -17,7 +17,7 @@
 				</ul>
 			</main>
 			<div class="toTableWrap">
-				<a href="/" class="toTable">テーブルに戻る</a>
+				<a href="./" class="toTable">テーブルに戻る</a>
 			</div>
 		</section>
 	</body>
